--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
           <h3 id="computer-score">0</h3>
         </div>
         <div class="player computer">
-          <h3 class="player--name">Computer</h3>
+          <h3 class="player--name mobile">CPU</h3>
+          <h3 class="player--name tablet">Computer</h3>
           <h3 class="computer--choice">?</h3>
         </div>
       </div>
