updated image and css paths

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
@@ -46,15 +46,15 @@
       <div class="choices">
         <button class="choice" id="Rock">
           Rock
-          <img id="Rock" src="/rock.png" alt="rock" />
+          <img id="Rock" src="./public/rock.png" alt="rock" />
         </button>
         <button class="choice" id="Paper">
           Paper
-          <img id="Paper" src="/paper.png" alt="paper" />
+          <img id="Paper" src="./public/paper.png" alt="paper" />
         </button>
         <button class="choice" id="Scissors">
           Scissors
-          <img id="Scissors" src="/scissors.png" alt="scissors" />
+          <img id="Scissors" src="./public/scissors.png" alt="scissors" />
         </button>
       </div>
     </section>
